# PlaylistGen

./: .gitignore  License  PlaylistAgent.py  README.md  pyproject.toml  requirements.txt  taste_profile.json
playlistgen/: __init__.py  __main__.py  ai_enhancer.py  audio_analysis.py  bulk-mood.py  cli.py  clustering.py  config.py  feedback.py  genre_service.py  gui.py  itunes.py  lastfm_client.py  llm_client.py  local_scanner.py  metadata.py  mood_map.py  mood_service.py  pattern_analyzer.py  pipeline.py  pipeline_new.py  playlist_builder.py  playlist_generator.py  playlist_scraper.py  prompt_io.py  scoring.py  seed_playlist.py  session_model.py  similarity.py  spotify_export.py  spotify_profile.py  tag_mood_service.py  train_model.py  utils.py
playlistgen/enrichers/: __init__.py  ollama_enricher.py
scripts/: load_enrichment_cache.py
tests/: test_ai_enhancer.py  test_audio_analysis.py  test_cli.py  test_clustering.py  test_clustering_phase2.py  test_config.py  test_feedback.py  test_genre_service.py  test_gui.py  test_itunes.py  test_lastfm_client.py  test_llm_client.py  test_metadata.py  test_mood_map.py  test_new_modules.py  test_ollama_enricher.py  test_pattern_analyzer.py  test_pipeline.py  test_playlist_builder.py  test_playlist_scraper.py  test_prompt_io.py  test_scoring.py  test_scoring_phase2.py  test_seed_playlist.py  test_session_model.py  test_similarity.py  test_spotify_export.py  test_spotify_profile.py  test_utils.py
