[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "playlistgen"
version = "0.1.0"
description = "Generate playlists based on Spotify history and iTunes library"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.0",
    "PyYAML>=5.1",
    "requests>=2.0",
    "tqdm>=4.0",
    "scikit-learn>=0.24",
    "mutagen>=1.45",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
spotify = ["spotipy>=2.23"]
tui = ["questionary>=1.10"]
ollama = ["ollama>=0.1.0"]

[project.scripts]
playlistgen = "playlistgen.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["playlistgen*"]
